fixed up spacing between search-box and rest of the content

--- a/diary-ui/src/components/Notes/notes.scss
+++ b/diary-ui/src/components/Notes/notes.scss
@@ -49,7 +49,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-bottom: 0.5rem;
+        margin-bottom: 2.5rem;
     }
 
     .input {
